--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Elements\FilledRegion.cs" />
     <Compile Include="Elements\FilledRegionType.cs" />
     <Compile Include="Elements\GlobalParameter.cs" />
+    <Compile Include="Elements\FamilyParameter.cs" />
     <Compile Include="Elements\PathOfTravel.cs" />
     <Compile Include="Elements\RoofType.cs" />
     <Compile Include="Elements\Roof.cs" />
