--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Elements\DividedPathTests.cs" />
     <Compile Include="Elements\DividedSurfaceTests.cs" />
     <Compile Include="Elements\DocumentTests.cs" />
+    <Compile Include="Elements\ElementTypeTests.cs" />
     <Compile Include="Elements\ElementTests.cs" />
     <Compile Include="Elements\FillPatternTests.cs" />
     <Compile Include="Elements\FilterTests.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Elements\ReferencePointTests.cs" />
     <Compile Include="Elements\ParseEnumTests.cs" />
     <Compile Include="Elements\PerformanceAdvTests.cs" />
+    <Compile Include="Elements\RoofTypeTests.cs" />
     <Compile Include="Elements\RoomTests.cs" />
     <Compile Include="Elements\RevisionTests.cs" />
     <Compile Include="Elements\SunSettingsTests.cs" />
