--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="PerformanceAdviserTests.cs" />
     <Compile Include="RoofTypeTests.cs" />
     <Compile Include="SerializationTests.cs" />
+    <Compile Include="ViewportTests.cs" />
     <Compile Include="SpaceTests.cs" />
     <Compile Include="WallTests.cs" />
     <Compile Include="CurtainSystemTests.cs" />
