--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -156,6 +156,7 @@
     <Compile Include="SunSettingsTests.cs" />
     <Compile Include="TopographyTests.cs" />
     <Compile Include="TransformTest.cs" />
+    <Compile Include="WarningTests.cs" />
     <Compile Include="WallTypeTests.cs" />
     <Compile Include="WorkflowTest.cs" />
     <Compile Include="XYZTests.cs" />
