--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="GroupTests.cs" />
     <Compile Include="PathOfTravelTests.cs" />
     <Compile Include="PerformanceAdviserTests.cs" />
+    <Compile Include="RoofTests.cs" />
     <Compile Include="RoofTypeTests.cs" />
     <Compile Include="SerializationTests.cs" />
     <Compile Include="SheetTests.cs" />
