--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="GroupTests.cs" />
     <Compile Include="PathOfTravelTests.cs" />
     <Compile Include="PerformanceAdviserTests.cs" />
+    <Compile Include="PerformanceForRevitTests.cs" />
     <Compile Include="RoofTests.cs" />
     <Compile Include="RoofTypeTests.cs" />
     <Compile Include="ScheduleOnSheetTests.cs" />
