--- a/src/Config/dynamo-nuget.config
+++ b/src/Config/dynamo-nuget.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+    <add key="local" value="C:\nuget_repo" />
   </packageSources>
   <config>
     <add key="dependencyversion" value="Highest" />
