--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -95,6 +95,8 @@
     <Compile Include="Elements\ElementType.cs" />
     <Compile Include="Elements\FilledRegion.cs" />
     <Compile Include="Elements\FilledRegionType.cs" />
+    <Compile Include="Elements\GroupType.cs" />
+    <Compile Include="Elements\SpecType.cs" />
     <Compile Include="Elements\ForgeType.cs" />
     <Compile Include="Elements\GlobalParameter.cs" />
     <Compile Include="Elements\FamilyParameter.cs" />
