--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="AdaptiveComponentTests.cs" />
     <Compile Include="AnalysisDisplayTests.cs" />
+    <Compile Include="AppearanceAssetElementTests.cs" />
     <Compile Include="Application\FamilyDocumentTests.cs" />
     <Compile Include="AreaTests.cs" />
     <Compile Include="AsynchronousModeTests.cs" />
