--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Elements\ScheduleOnSheet.cs" />
     <Compile Include="Elements\Viewport.cs" />
     <Compile Include="Elements\Space.cs" />
+    <Compile Include="Elements\Views\View3DTemplate.cs" />
     <Compile Include="Elements\Views\AreaPlanView.cs" />
     <Compile Include="Elements\Views\Legend.cs" />
     <Compile Include="PerformanceAdviser\FailureMessage.cs" />
